--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-query-devtools": "^4.2.3",
     "@tosspayments/payment-sdk": "^1.1.1",
+    "@types/react-slick": "^0.23.10",
     "@types/react-syntax-highlighter": "^13.5.2",
+    "@types/styled-components": "^5.1.26",
     "axios": "^0.26.0",
     "chakra-react-select": "^3.3.1",
     "constate": "^3.3.2",
@@ -51,7 +53,9 @@
     "react-query": "^3.39.2",
     "react-redux": "^7.2.0",
     "react-select": "^5.2.1",
+    "react-slick": "^0.29.0",
     "react-syntax-highlighter": "^15.5.0",
+    "styled-components": "^5.3.6",
     "tinycolor2": "^1.4.2",
     "yup": "^0.32.11"
   },
@@ -84,6 +88,7 @@
     "minimist": "^1.2.6",
     "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.2",
+    "slick-carousel": "^1.8.1",
     "tokript": "^0.9.4",
     "typescript": "^4.2.4"
   },
